  still listed in the `requirements.txt` because it's impossible to tell the
  two cases apart there.
- New features in userscripts:
    * `qutedmenu` gained new `window` and `private` options.
    * `qute-keepassxc` now supports unlock-on-demand, multiple account
      selection via rofi, and inserting TOTP-codes (experimental).
- New `colors.webpage.darkmode.increase_text_contrast` setting for Qt 6.3+
- New `fonts.tooltip`, `colors.tooltip.bg` and `colors.tooltip.fg` settings.
- New `log-qt-events` debug flag for `-D`

Removed
~~~~~~~

- Python 3.8.0 or newer is now required.
  - Support for Python 3.6 and 3.7 is dropped, as they both reached
    their [end of life] in December 2021 and June 2023, respectively.
- Support for Qt/PyQt before 5.15.0 and QtWebEngine before 5.15.2 are now
  dropped, as older Qt versions are
  https://endoflife.date/qt[end-of-life upstream] since mid/late 2020
  (5.13/5.14) and late 2021 (5.12 LTS).
- The `--enable-webengine-inspector` flag is now dropped. It used to be ignored
  but still accepted, to allow doing a `:restart` from versions older than v2.0.0.
  Thus, switching from v1.x.x directly to v3.0.0 via `:restart` will not be possible.
- It's planned to drop support for various legacy platforms and libraries which
  are unsupported upstream, such as:
  * The QtWebKit backend
  * macOS 10.14 (via Homebrew)
  * 32-bit Windows (via Qt)
  * Windows 8 (via Qt)
  * Windows 10 before 1809 (via Qt)
  * Possibly other more minor dependency changes

Changed
~~~~~~~

- The qutebrowser icons got moved from `icons/` to `qutebrowser/icons` in the
  repository, so that it's possible for qutebrowser to load them using Python's
  resource system (rather than compiling them into a Qt resource file).
  Packagers are advised to use `misc/Makefile` if possible, which has been
  updated with the new paths.
- The `content.javascript.can_access_clipboard` setting got renamed to