@@ -294,6 +294,7 @@
 |<<prompt.filebrowser,prompt.filebrowser>>|Show a filebrowser in download prompts.
 |<<prompt.radius,prompt.radius>>|Rounding radius (in pixels) for the edges of prompts.
 |<<qt.args,qt.args>>|Additional arguments to pass to Qt, without leading `--`.
+|<<qt.chromium.experimental_web_platform_features,qt.chromium.experimental_web_platform_features>>|Enables Web Platform features that are in development.
 |<<qt.chromium.low_end_device_mode,qt.chromium.low_end_device_mode>>|When to use Chromium's low-end device mode.
 |<<qt.chromium.process_model,qt.chromium.process_model>>|Which Chromium process model to use.
 |<<qt.chromium.sandboxing,qt.chromium.sandboxing>>|What sandboxing mechanisms in Chromium to use.
@@ -3850,6 +3851,25 @@ This setting requires a restart.
 Type: <<types,List of String>>
 
 Default: empty
+
+[[qt.chromium.experimental_web_platform_features]]
+=== qt.chromium.experimental_web_platform_features
+Enables Web Platform features that are in development.
+This passes the `--enable-experimental-web-platform-features` flag to Chromium. By default, this is enabled with Qt 5 to maximize compatibility despite an aging Chromium base.
+
+This setting requires a restart.
+
+This setting is only available with the QtWebEngine backend.
+
+Type: <<types,String>>
+
+Valid values:
+
+ * +always+: Enable experimental web platform features.
+ * +auto+: Enable experimental web platform features when using Qt 5.
+ * +never+: Disable experimental web platform features.
+
+Default: +pass:[auto]+
 
 [[qt.chromium.low_end_device_mode]]
 === qt.chromium.low_end_device_mode
