@@ -25,6 +25,7 @@ import argparse
 import pathlib
 from typing import Any, Dict, Iterator, List, Optional, Sequence, Tuple
 
+from qutebrowser.qt import machinery
 from qutebrowser.qt.core import QLocale
 
 from qutebrowser.config import config
@@ -331,7 +332,13 @@ _WEBENGINE_SETTINGS: Dict[str, Dict[Any, Optional[str]]] = {
         'enable-all': None,
         'disable-seccomp-bpf': '--disable-seccomp-filter-sandbox',
         'disable-all': '--no-sandbox',
-    }
+    },
+    'qt.chromium.experimental_web_platform_features': {
+        'always': '--enable-experimental-web-platform-features',
+        'never': None,
+        'auto':
+            '--enable-experimental-web-platform-features' if machinery.IS_QT5 else None,
+    },
 }
 
 
